--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,3 +1,3 @@
 <div class="overlay" *ngIf="isLoading$ | async">
-  <mat-progress-spinner></mat-progress-spinner>
+  <mat-spinner></mat-spinner>
 </div>
